--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
 <head>
   <meta charset="utf-8">
   <title>Kiran's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/kiran_profile_pic.jpg" alt="Kiran profile picture" height="150"></td>
+      <td><img class="circular" src="images/kiran_profile_pic.jpg" alt="Kiran profile picture"></td>
       <td><h1>Kiran Mohan</h1>
       <p><em>Robotics Software Engineer, <a href="https://www.neatorobotics.com"><strong>Neato Robotics Inc.</strong></a></em></p>
       <p>I am a Software Engineer at Neato Robotics Inc. experienced in navigation algorithms
         as well as a little bit of systems software.</p></td>
     </tr>
   </table>
+
   <hr>
 
   <h3>Education</h3>
